--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- AQUI VAMOS ESCRIBIR NOSOTROS WN -->
     <div class="input-area">
-      <input id="messageInput" type="text" placeholder="Escribe un mensaje..." />
+      <input id="messageInput" type="text" placeholder="Pregunta algo." />
       <button id="sendBtn">Enviar</button>
     </div>
 
